<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/yure_tiem">

                <AutoCompleteTextView
                    android:id="@+id/yrsj"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/test_time">

                <AutoCompleteTextView
                    android:id="@+id/jcsj"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/unit_input">

                <AutoCompleteTextView
                    android:id="@+id/unit_input"
                    style="@style/AutoCompleteTextViewStyle" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/jiaozhenga">

                <AutoCompleteTextView
                    android:id="@+id/jzqxa"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberSigned|numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/jiaozhengb">

                <AutoCompleteTextView
                    android:id="@+id/jzqxb"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberSigned|numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/jiaozhengc">

                <AutoCompleteTextView
                    android:id="@+id/jzqxc"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberSigned|numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/jiaozhengd">

                <AutoCompleteTextView
                    android:id="@+id/jzqxd"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberSigned|numberDecimal" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/yin_from">

                <AutoCompleteTextView
                    android:id="@+id/yin_xfwa"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/yin_to">

                <AutoCompleteTextView
                    android:id="@+id/yin_xfwb"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/yang_from">

                <AutoCompleteTextView
                    android:id="@+id/yang_xfwa"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/yang_to">

                <AutoCompleteTextView
                    android:id="@+id/yang_xfwb"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/keyi_from">

                <AutoCompleteTextView
                    android:id="@+id/kya"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/keyi_to">

                <AutoCompleteTextView
                    android:id="@+id/kyb"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="合格"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/ok_a_demarcate"
                android:layout_width="100dp"
                android:layout_height="fill_parent" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/range_a">

                <AutoCompleteTextView
                    android:id="@+id/ok_a"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/ok_b_demarcate"
                android:layout_width="100dp"
                android:layout_height="fill_parent" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/range_b">

                <AutoCompleteTextView
                    android:id="@+id/ok_b"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_ng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="不合格"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/ng_a_demarcate"
                android:layout_width="100dp"
                android:layout_height="fill_parent" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/range_a">

                <AutoCompleteTextView
                    android:id="@+id/ng_a"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/ng_b_demarcate"
                android:layout_width="100dp"
                android:layout_height="fill_parent" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/range_b">

                <AutoCompleteTextView
                    android:id="@+id/ng_b"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_df"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="可疑"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/df_a_demarcate"
                android:layout_width="100dp"
                android:layout_height="fill_parent" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/range_a">

                <AutoCompleteTextView
                    android:id="@+id/df_a"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/df_b_demarcate"
                android:layout_width="100dp"
                android:layout_height="fill_parent" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:hint="@string/range_b">

                <AutoCompleteTextView
                    android:id="@+id/df_b"
                    style="@style/AutoCompleteTextViewStyle"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>-->

    </LinearLayout>
</ScrollView>