<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/beijing_img">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/customactivityoncrash_error_activity_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/customactivityoncrash_error_activity_error_occurred_explanation"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/customactivityoncrash_error_activity_restart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_background_blue"
                android:text="@string/customactivityoncrash_error_activity_close_app" />

            <Button
                android:id="@+id/customactivityoncrash_error_activity_more_info_button"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customactivityoncrash_error_activity_error_details"
                android:textColor="?colorPrimary" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>