<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/testprojectname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_projectname"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/cure_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cure_name"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/standardname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/standardname"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ed_testmethod"
                android:textColor="#1a1a1a"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/chosemethod"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:enabled="false"
                android:entries="@array/methods_jtj" />
        </LinearLayout>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout32"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:textColorHint="#ef0707">

                <AutoCompleteTextView
                    android:id="@+id/c1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textInputLayout5"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:hint="C线出线值"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:textColorHint="#ef0707">

                <AutoCompleteTextView
                    android:id="@+id/t1A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textInputLayout5"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:hint="T线出线值"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout5"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:textColorHint="#ef0707">

                <AutoCompleteTextView
                    android:id="@+id/c1_t1A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textInputLayout5"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:hint="T/C出线值"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_curve"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:background="@drawable/btn_background_blue"
                android:text="@string/save"
                android:textColor="#fefefe"
                android:textSize="20dp" />

            <Button
                android:id="@+id/delete_curve"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn_background_blue"
                android:text="删除"
                android:textColor="#DC000F"
                android:textSize="18dp"
                android:visibility="visible" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>